--- a/style.css
+++ b/style.css
@@ -14,8 +14,12 @@ nav > a > img{
     display: block;
     max-width: 50px;
     border-radius: 50%;
-    margin: 25px 0px;
+    margin: 25px 5px;
     
+}
+nav > a > img:hover {
+    transform: scale(1.2);
+    border: 1px solid white;
 }
 main {
     background-image: url(pacote-d013/imagens/frame-iphone.png);
