--- a/estilos/style.css
+++ b/estilos/style.css
@@ -2,7 +2,7 @@
 body {
     margin: 0px;
     padding: 0px;
-    background-image: url(pacote-d013/imagens/fundo-madeira.jpg);
+    background-image: url(../pacote-d013/imagens/fundo-madeira.jpg);
     font-family: Arial, Helvetica, sans-serif;
 }
 nav {
@@ -25,7 +25,7 @@ nav > a > img:hover {
     box-sizing: border-box;
 }
 main {
-    background-image: url(pacote-d013/imagens/frame-iphone.png);
+    background-image: url(../pacote-d013/imagens/frame-iphone.png);
     width: 311px;
     height: 629px;
     margin: auto;
