--- a/estilos/style.css
+++ b/estilos/style.css
@@ -8,12 +8,11 @@ body {
 nav {
     position: absolute;
     top: 0px;
-    right: 0px;
-
+    left: 10%;
     
 }
 nav > a > img{
-    display: block;
+    display: inline-block;
     max-width: 50px;
     border-radius: 50%;
     margin: 25px 5px;
@@ -29,7 +28,7 @@ main {
     width: 311px;
     height: 629px;
     margin: auto;
-    margin-top: 25px;
+    margin-top: 100px;
     
 }
 iframe.tela {
